# emo

./: .gitattributes  .gitmodules  Cargo.toml  LICENSE
6502_docs/: 6502_Links.txt  65xx Opcode Chart.xls  65xx Processor Data.txt  pla.txt
cartridge/: Cargo.toml
cartridge/src/: lib.rs
mos6502/: Cargo.toml
mos6502/src/: context.rs  cpu.rs  lib.rs  operations.rs  registers.rs  trace.rs
nes/: Cargo.toml
nes/src/: bus.rs  cartridge.rs  lib.rs
nes/src/cpu/: context.rs  cpu.rs  mod.rs  operations.rs  trace.rs
snake/: Cargo.toml
snake/src/: game.rs  lib.rs
src/: bus.rs  c6502.rs  common.rs  cpu2A03.rs  cpu6502.rs  main.rs  mapper.rs  memory.rs  nes.rs  operations.rs  serialization.rs  snake.rs  system.rs  tests.rs
src/cartridge/: mod.rs
src/common/: memory.rs  mod.rs
src/debugger/: mod.rs
src/mos6502/: context.rs  cpu.rs  cpu6502.rs  dissassemble.rs  memory.rs  mod.rs  operations.rs  registers.rs  tests.rs  trace.rs
src/nes/: mod.rs  tests.rs
src/snake/: game.rs  mod.rs
tests/cpu_reset/: ram_after_reset.nes  registers.nes
tests/cpu_reset/source/: nes.cfg  ram_after_reset.s  registers.s
tests/cpu_reset/source/common/: ascii.chr  console.s  delay.s  macros.inc  neshw.inc  ppu.s  run_at_reset.s  shell.inc  shell.s  testing.s  text_out.s
tests/instr_timing/: instr_timing.nes
tests/instr_timing/rom_singles/: 1-instr_timing.nes  2-branch_timing.nes
tests/instr_timing/source/: 1-instr_timing.s  2-branch_timing.s
tests/instr_timing/source/common/: build_rom.s  crc.s  print.s
utilities/: Cargo.toml
utilities/src/: lib.rs
