[package]
name = "emo"
version = "0.1.0"
authors = ["James Kleinecke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.7.3"

[dependencies.cursive]
version = "0.16"
default-features = false
features = ["crossterm-backend"]

[dependencies.sdl2]
version = "0.34"
#default-features = true
features = ["bundled","static-link"]
