[package]
name = "emo"
version = "0.1.0"
authors = ["James Kleinecke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.7.3"
clap = "2.33"

[dependencies.sdl2]
version = "0.34"
#default-features = true
features = ["bundled","static-link"]

#TODO Add libretro and switch to dynlib generation
#[lib]
#crate-type = ["cdynlib"]

#[dependencies]
#https://github.com/koute/libretro-backend
#libretro-backend = "0.2"