[package]
name = "nes"
version = "0.1.0"
authors = ["James Kleinecke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.mos6502]
path="../mos6502"

[dependencies.cartridge]
path="../cartridge"

[dependencies.utilities]
path="../utilities"