[package]
name = "snake"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.7.3"

[dependencies.libretro-backend]
path="../libretro-backend"

[dependencies.mos6502]
path="../mos6502"

[dependencies.cartridge]
path="../cartridge"

[dependencies.utilities]
path="../utilities"