[package]
name = "snake"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.7.3"
#libretro-backend = "0.2.1"

[dependencies.libretro-backend]
path="../libretro-backend"

[dependencies.nes]
path="../nes"
